# milkshake

./: LICENSE  README.md  milkshake.cabal
examples/: Simple.hs
src/: Milkshake.hs
