name:                milkshake
version:             0.1
synopsis:            Utilities for building static sites using Shake
-- description:
homepage:            https://github.com/emilaxelsson/milkshake
license:             BSD3
license-file:        LICENSE
author:              Emil Axelsson
maintainer:          78emil@gmail.com
copyright:           Copyright (c) 2017, Emil Axelsson
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Milkshake

  build-depends:       base < 4.10,
                       directory,
                       extra,
                       shake < 0.16,
                       unordered-containers

  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite examples
  type:                exitcode-stdio-1.0
  hs-source-dirs:      examples
  main-is:             Simple.hs
  ghc-options:         -Wall
  build-depends:       base
                     , milkshake
                     , shake
  default-language:    Haskell2010

